deployment-todonodejs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node
  labels:
    app: todonodejs
  namespace: todonodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todonodejs
  template:
    metadata:
      labels:
        app: todonodejs
    spec:
      containers:
      - resources:
          limits:
            cpu: '0.5'
        image: quay.io/redhattraining/todo-single:v1.0
        name: todonodejs
        ports:
        - containerPort: 8080
          name: nodejs-http
---
