service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todonodejs
  name: node
  namespace: todonodejs
spec:
  ports:
  - port: 8080
  selector:
    app: todonodejs
