service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todonodejs
  name: mysql-node
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-node
