route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: todonodejs
  name: node
  namespace: mysql
spec:
  path: "/todo"
  to:
    kind: Service
    name: frontend
    weight: 100
